[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Scorpion/Scorpion.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 7.86855 )

[node name="Scorpion" type="KinematicBody2D"]
script = ExtResource( 1 )
movement_distance = 100.0

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, 8 )
color = Color( 0.180392, 0.14902, 0, 1 )
polygon = PoolVector2Array( -56, -24, 56, -24, 56, 8, -56, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area_Ride" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Ride"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="Rider_Position" type="Position2D" parent="."]
position = Vector2( 0, -64 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Area_Ride" to="." method="_on_Area_Ride_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
